--- a/gmall-search-web/src/main/resources/templates/index.html
+++ b/gmall-search-web/src/main/resources/templates/index.html
@@ -19,10 +19,10 @@
 <body>
   <div class="top_find">
     <div class="top_find_son">
-      <img src="/index/img/top_find_logo.png" alt="">
+      <img src="/index/img/taoxin.png" alt="">
       <div class="input_find">
         <input type="text" placeholder="卸妆水" />
-        <span style="background: url(../static/index/img/img_12.png) 0 -1px;"></span>
+        <span style="background: url(/index/img/img_12.png) 0 -1px;"></span>
         <a href="#"><img src="/index/img/img_09.png" /></a>
       </div>
     </div>
@@ -113,7 +113,7 @@
     <div class="header_sous">
       <div class="header_form">
         <input id="searchText" type="text" placeholder="" />
-        <span style="background: url(../static/index/img/img_12.png) 0 -1px;"></span>
+        <span style="background: url(/index/img/img_12.png) 0 -1px;"></span>
         <!--<button><i class="glyphicon"></i></button>-->
         <a href="#" ><img src="/index/img/img_09.png" onclick="search()" /></a>
       </div>
