module payment finished (not ready for Alipay business identify)

--- a/gmall-passport-web/src/main/resources/templates/index.html
+++ b/gmall-passport-web/src/main/resources/templates/index.html
@@ -71,7 +71,7 @@
 
 		
 		<!--底部-->
-		 <input type="text" id="ReturnUrl" th:value="${ReturnUrl}" style="display: none"/>
+		 <input type="hidden" id="ReturnUrl" th:value="${ReturnUrl}"/>
 		
 	</body>
 	<script language="JavaScript">
